tests/neg/i9287.scala
object Foo {
  Nil {
    class i0 { a: i2 =>  // error
      class i1
    }
  }  // error
}